--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ matplotlib==3.3.4
 numpy==1.20.3
 torch==1.3.1
 torchvision==0.4.2
-eagerpy==0.29.0
-foolbox==3.3.1
+torchattacks==3.3.0
 tqdm==4.41.1
 kornia==0.6.8
